--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <body>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-	<script type="text/javascript" src="src/js/script.js"></script>
+	<script type="text/javascript" src="src/js/build/script.js"></script>
 </body>
 </html>
