adding range price alternative

--- a/busqueda.html
+++ b/busqueda.html
@@ -101,7 +101,9 @@
           <h6>Rango de precios</h6>
         </div>
         <div class="col m9">
-
+          <div class="range-slider">
+              <input type="text" class="js-range-slider" value="" />
+          </div>
         </div>
       </div>
     </div>
@@ -114,7 +116,7 @@
           <h6>Reserva inmediata</h6>
         </div>
         <div class="col m6">
-          <p>Anuncios que no requieren que el anfitrión acepte la solicitud.</p>
+          <h6>Anuncios que no requieren que el anfitrión acepte la solicitud.</h6>
         </div>
         <div class="col m3">
           <div class="switch">
