--- a/busqueda.html
+++ b/busqueda.html
@@ -14,7 +14,8 @@
   <header>
   	<nav class="blanco">
       <div class="nav-wrapper">
-        <a href="#"><img src="src/img/favicon.ico"></a>
+        <a href="index.html"><img src="src/img/favicon.ico"></a>
+
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="#">Conviértete en anfitrión</a></li>
           <li><a href="#">Ayuda</a></li>
@@ -29,7 +30,7 @@
     <div class="row">
       <div class="col m7">
         <div class="row seleccion first">
-          <div class="col s3 texto">
+          <div class="col m2 ">
             <h6>Fechas</h6>    
           </div>
           <div class="col m3">
@@ -57,7 +58,7 @@
     <div class="row">
       <div class="col m7">
         <div class="row seleccion">
-          <div class="col m3 texto">
+          <div class="col m2 ">
             <h6>Tipo de habitación</h6>    
           </div>
           <div class="col m3">
@@ -98,7 +99,7 @@
     <div class="row">
       <div class="col m7">
         <div class="row seleccion">
-          <div class="col m3 texto">
+          <div class="col m2 ">
             <h6>Rango de precios</h6>
           </div>
           <div class="col m9">
@@ -113,7 +114,7 @@
     <div class="row">
       <div class="col m7">
         <div class="row seleccion">
-          <div class="col m3">
+          <div class="col m2">
             <h6>Reserva inmediata</h6>
           </div>
           <div class="col m6">
@@ -134,7 +135,267 @@
     </div>
   </section>
 
+  <!-- FILTRO AVANZADO -->
+  <section class="advanced-filter">
+    <div class="row">
+      <div class="col m7">
+        <div class="row">
+          <div class="col m2">
+            <button class="filter">Filtros</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row ad-filter">
+      <div class="col m7">
+        <div class="row">
+          <div class="col m2">
+            <h6>Tamaño</h6>    
+          </div>
+          <div class="col m3">
+            <select class="browser-default">
+              <option value="" disabled selected>Habitaciones</option>
+              <option value="1">1 dormitorio</option>
+              <option value="2">2 dormitorios</option>
+              <option value="3">3 dormitorios</option>
+              <option value="3">4 dormitorios</option>
+              <option value="3">5 dormitorios</option>
+              <option value="3">6 dormitorios</option>
+              <option value="3">7 dormitorios</option>
+            </select>
+          </div> 
+          <div class="col m3">
+            <select class="browser-default">
+              <option value="" disabled selected>Baños</option>
+              <option value="1">1 baño</option>
+              <option value="2">1.5 baños</option>
+              <option value="3">2 baños</option>
+              <option value="3">2.5 baños</option>
+              <option value="3">3 baños</option>
+              <option value="3">3.5 baños</option>
+              <option value="3">4 baños</option>
+            </select>
+          </div> 
+          <div class="col m3">
+            <select class="browser-default">
+              <option value="" disabled selected>Camas</option>
+              <option value="1">1 cama</option>
+              <option value="2">2 camas</option>
+              <option value="3">3 camas</option>
+              <option value="3">4 camas</option>
+              <option value="3">5 camas</option>
+              <option value="3">6 camas</option>
+              <option value="3">7 camas</option>
+            </select>
+          </div>      
+        </div>
+        <div class="row seleccion">
+          <div class="col m2">
+            <h6>Opciones</h6> 
+          </div>
+          <div class="col m3">
+                <input type="checkbox" id="test4" />
+                <label for="test4">Superhost</label> 
+                <span class="view-more">Quédate en casa de anfitriones excepcionales. <a href="https://www.airbnb.cl/superhost">Más información</a></span>      
+          </div>
+        </div>
+        <div class="row">
+          <div class="col m2">
+            <h6>Servicios</h6> 
+          </div>
+          <div class="col m3">
+                <input type="checkbox" id="test5" />
+                <label class="advanced" for="test5">Internet inalámbrico (wifi)</label> 
+          </div>
+          <div class="col m3">
+                <input type="checkbox" id="test6" />
+                <label class="advanced" for="test6">TV</label> 
+          </div>
+          <div class="col m2">
+                <input type="checkbox" id="test7" />
+                <label class="advanced" for="test7">Cocina</label> 
+          </div>
+          <div class="col m2">
+            <span><i class="material-icons  down">&#xE5C5;</i></span>
+            <span><i class="material-icons up">&#xE5C7;</i></span>
+          </div>
+        </div>
+          <!-- FILTRO OPCIONAL -->
+          <div class="row filter-optional">
+            <div class="divider optional"></div>
+            <div class="offset-m2 col m3 ">
+                  <input type="checkbox" id="test17" />
+                  <label class="advanced" for="test17">Acceso disponible las 24 horas</label> 
+            </div>
+            <div class="col m3">
+                  <input type="checkbox" id="test18" />
+                  <label class="advanced" for="test18">Aire acondicionado</label> 
+            </div>
+            <div class="col m3 optional">
+                  <input type="checkbox" id="test19" />
+                  <label class="advanced" for="test19">Apto para familias y niños</label> 
+            </div>
+            <div class="row">
+              <div class="offset-m2 col m3 ">
+                    <input type="checkbox" id="test20" />
+                    <label class="advanced" for="test20">Calefacción</label> 
+              </div>
+              <div class="col m3">
+                    <input type="checkbox" id="test21" />
+                    <label class="advanced" for="test21">Champú</label> 
+              </div>
+              <div class="col m3 optional">
+                    <input type="checkbox" id="test22" />
+                    <label class="advanced" for="test22">Chimenea interior</label> 
+              </div> 
+            </div>
+            <div class="row">
+              <div class="offset-m2 col m3 ">
+                    <input type="checkbox" id="test23" />
+                    <label class="advanced" for="test23">Desayuno</label> 
+              </div>
+              <div class="col m3">
+                    <input type="checkbox" id="test24" />
+                    <label class="advanced" for="test24">Internet</label> 
+              </div>
+              <div class="col m3 optional">
+                    <input type="checkbox" id="test25" />
+                    <label class="advanced" for="test25">Lavadora</label> 
+              </div> 
+            </div>
+            <div class="row">
+              <div class="offset-m2 col m3 ">
+                    <input type="checkbox" id="test36" />
+                    <label class="advanced" for="test36">Perchas</label> 
+              </div>
+              <div class="col m3">
+                    <input type="checkbox" id="test37"/>
+                    <label class="advanced" for="test37"> Pestillo en la puerta del dormitorio</label> 
+              </div>
+              <div class="col m3 optional">
+                    <input type="checkbox" id="test26" />
+                    <label class="advanced" for="test26">Plancha</label> 
+              </div> 
+            </div>
+            <div class="row">
+              <div class="offset-m2 col m3 ">
+                    <input type="checkbox" id="test27" />
+                    <label class="advanced" for="test27">Secador de pelo</label> 
+              </div>
+              <div class="col m3">
+                    <input type="checkbox" id="test28" />
+                    <label class="advanced" for="test28">Secadora</label> 
+              </div>
+              <div class="col m3 optional">
+                    <input type="checkbox" id="test29" />
+                    <label class="advanced" for="test29">TV por satélite</label> 
+              </div> 
+            </div>
+            <div class="row">
+              <div class="offset-m2 col m3 ">
+                    <input type="checkbox" id="test30" />
+                    <label class="advanced" for="test30">Timbre / Interfono inalámbrico</label> 
+              </div>
+              <div class="col m3">
+                    <input type="checkbox" id="test31" />
+                    <label class="advanced" for="test31">Zona para trabajar con portátiles</label> 
+              </div>
+            </div>
+          </div>
+          <!-- FIN FILTRO OPCIONAL -->
 
+        <div class="row">
+          <div class="col m2">
+            <h6>Servicios</h6> 
+          </div>
+          <div class="col m3">
+                <input type="checkbox" id="test8" />
+                <label class="advanced" for="test8">Edificio con ascensor</label> 
+          </div>
+          <div class="col m3">
+                <input type="checkbox" id="test9" />
+                <label class="advanced" for="test9">Gimnasio</label> 
+          </div>
+          <div class="col m2">
+                <input type="checkbox" id="test10" />
+                <label class="advanced" for="test10">Piscina</label> 
+          </div>
+          <div class="col m2 down">
+            <span><i class="material-icons down-two">&#xE5C5;</i></span>
+            <span><i class="material-icons up-two">&#xE5C7;</i></span>
+          </div>
+        </div>
+          <!-- FILTRO OPCIONAL -->
+          <div class="row filter-optional-two">
+            <div class="divider optional"></div>
+            <div class="offset-m2 col m3 ">
+                  <input type="checkbox" id="test32" />
+                  <label class="advanced" for="test32">Acceso para discapacitados</label> 
+            </div>
+            <div class="col m3">
+                  <input type="checkbox" id="test33" />
+                  <label class="advanced" for="test33"> Aparcamiento de pago fuera de las instalaciones</label> 
+            </div>
+            <div class="col m3 optional">
+                  <input type="checkbox" id="test34" />
+                  <label class="advanced" for="test34">Parking gratuito incluido</label> 
+            </div>
+            <div class="row">
+              <div class="offset-m2 col m3 ">
+                    <input type="checkbox" id="test35" />
+                    <label class="advanced" for="test35"> Jacuzzi</label> 
+              </div>
+            </div>
+
+          </div>
+   
+          <!-- FIN FILTRO OPCIONAL -->
+        <div class="row">
+          <div class="col m2">
+            <h6>Normas de la casa</h6> 
+          </div>
+          <div class="col m3">
+                <input type="checkbox" id="test11" />
+                <label class="advanced" for="test11">Admite mascotas</label> 
+          </div>
+          <div class="col m3">
+                <input type="checkbox" id="test12" />
+                <label class="advanced" for="test12">Apto para eventos</label> 
+          </div>
+          <div class="col m3">
+                <input type="checkbox" id="test13"/>
+                <label class="advanced" for="test13">Apto para fumadores</label> 
+          </div>
+        </div>
+        <div class="row">
+          <div class="col m2">
+            <h6>Idioma del anfitrión</h6> 
+          </div>
+          <div class="col m3">
+                <input type="checkbox" id="test14"/>
+                <label class="advanced" for="test14">Español</label> 
+          </div>
+          <div class="col m3">
+                <input type="checkbox" id="test15"/>
+                <label class="advanced" for="test15">English</label> 
+          </div>
+          <div class="col m3">
+                <input type="checkbox" id="test16"/>
+                <label class="advanced" for="test16">Français</label> 
+          </div>
+        </div>
+        <!-- BOTONES CANCELAR - APLICAR -->
+        <div class="row">
+          <div class="offset-m4 col m4 center-align">
+             <span class="filter add">Cancelar</span>
+          </div>
+          <div class="col m4 center-align">
+             <span class="filter add apply red lighten-1">Aplicar filtros</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 <script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
