fixed rows and columns

--- a/busqueda.html
+++ b/busqueda.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">	
-    <title>Airbnb</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">	
+  <title>Airbnb</title>
   <link rel="shortcut icon" href="src/img/favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="dist/css/style.min.css"> 
@@ -25,7 +25,7 @@
       </div>
     </nav>
   </header>
-    <!-- SELECCION FECHAS LLEGADA, SALIDA, Nº HUESPED -->
+  <!-- SELECCION FECHAS LLEGADA, SALIDA, Nº HUESPED -->
   <section>
     <div class="row">
       <div class="col m7">
@@ -52,11 +52,8 @@
             </select>
           </div>    
         </div>
-      </div>
-    </div>
-    <!-- SELECCION TIPO DE HABITACION -->
-    <div class="row">
-      <div class="col m7">
+
+        <!-- SELECCION TIPO DE HABITACION -->
         <div class="row seleccion">
           <div class="col m2 ">
             <h6>Tipo de habitación</h6>    
@@ -92,27 +89,20 @@
             </div>
           </div>     
         </div>
-      </div>
-    </div>
+        <!-- RANGO DE PRECIOS -->
 
-    <!-- RANGO DE PRECIOS -->
-    <div class="row">
-      <div class="col m7">
         <div class="row seleccion">
           <div class="col m2 ">
             <h6>Rango de precios</h6>
           </div>
           <div class="col m9">
             <div class="range-slider">
-                <input type="text" class="js-range-slider" value="" />
+              <input type="text" class="js-range-slider" value="" />
             </div>
           </div>
         </div>
-      </div>
-    </div>
-    <!-- RESERVA -->
-    <div class="row">
-      <div class="col m7">
+
+        <!-- RESERVA -->
         <div class="row seleccion">
           <div class="col m2">
             <h6>Reserva inmediata</h6>
@@ -132,6 +122,13 @@
           </div>
         </div>
       </div>
+
+      <!-- ACA VA EL MAPA -->
+      <div class="col m5">
+        <h6>MAPAAAA</h6>
+      </div>
+      <!-- FIN MAPA -->
+      
     </div>
   </section>
 
@@ -194,9 +191,9 @@
             <h6>Opciones</h6> 
           </div>
           <div class="col m3">
-                <input type="checkbox" id="test4" />
-                <label for="test4">Superhost</label> 
-                <span class="view-more">Quédate en casa de anfitriones excepcionales. <a href="https://www.airbnb.cl/superhost">Más información</a></span>      
+            <input type="checkbox" id="test4" />
+            <label for="test4">Superhost</label> 
+            <span class="view-more">Quédate en casa de anfitriones excepcionales. <a href="https://www.airbnb.cl/superhost">Más información</a></span>      
           </div>
         </div>
         <div class="row">
@@ -204,167 +201,167 @@
             <h6>Servicios</h6> 
           </div>
           <div class="col m3">
-                <input type="checkbox" id="test5" />
-                <label class="advanced" for="test5">Internet inalámbrico (wifi)</label> 
+            <input type="checkbox" id="test5" />
+            <label class="advanced" for="test5">Internet inalámbrico (wifi)</label> 
           </div>
           <div class="col m3">
-                <input type="checkbox" id="test6" />
-                <label class="advanced" for="test6">TV</label> 
+            <input type="checkbox" id="test6" />
+            <label class="advanced" for="test6">TV</label> 
           </div>
           <div class="col m2">
-                <input type="checkbox" id="test7" />
-                <label class="advanced" for="test7">Cocina</label> 
+            <input type="checkbox" id="test7" />
+            <label class="advanced" for="test7">Cocina</label> 
           </div>
           <div class="col m2">
             <span><i class="material-icons  down">&#xE5C5;</i></span>
             <span><i class="material-icons up">&#xE5C7;</i></span>
           </div>
         </div>
-          <!-- FILTRO OPCIONAL -->
-          <div class="row filter-optional">
-            <div class="divider optional"></div>
+        <!-- FILTRO OPCIONAL -->
+        <div class="row filter-optional">
+          <div class="divider optional"></div>
+          <div class="offset-m2 col m3 ">
+            <input type="checkbox" id="test17" />
+            <label class="advanced" for="test17">Acceso disponible las 24 horas</label> 
+          </div>
+          <div class="col m3">
+            <input type="checkbox" id="test18" />
+            <label class="advanced" for="test18">Aire acondicionado</label> 
+          </div>
+          <div class="col m3 optional">
+            <input type="checkbox" id="test19" />
+            <label class="advanced" for="test19">Apto para familias y niños</label> 
+          </div>
+          <div class="row">
             <div class="offset-m2 col m3 ">
-                  <input type="checkbox" id="test17" />
-                  <label class="advanced" for="test17">Acceso disponible las 24 horas</label> 
+              <input type="checkbox" id="test20" />
+              <label class="advanced" for="test20">Calefacción</label> 
             </div>
             <div class="col m3">
-                  <input type="checkbox" id="test18" />
-                  <label class="advanced" for="test18">Aire acondicionado</label> 
+              <input type="checkbox" id="test21" />
+              <label class="advanced" for="test21">Champú</label> 
             </div>
             <div class="col m3 optional">
-                  <input type="checkbox" id="test19" />
-                  <label class="advanced" for="test19">Apto para familias y niños</label> 
+              <input type="checkbox" id="test22" />
+              <label class="advanced" for="test22">Chimenea interior</label> 
+            </div> 
+          </div>
+          <div class="row">
+            <div class="offset-m2 col m3 ">
+              <input type="checkbox" id="test23" />
+              <label class="advanced" for="test23">Desayuno</label> 
             </div>
-            <div class="row">
-              <div class="offset-m2 col m3 ">
-                    <input type="checkbox" id="test20" />
-                    <label class="advanced" for="test20">Calefacción</label> 
-              </div>
-              <div class="col m3">
-                    <input type="checkbox" id="test21" />
-                    <label class="advanced" for="test21">Champú</label> 
-              </div>
-              <div class="col m3 optional">
-                    <input type="checkbox" id="test22" />
-                    <label class="advanced" for="test22">Chimenea interior</label> 
-              </div> 
+            <div class="col m3">
+              <input type="checkbox" id="test24" />
+              <label class="advanced" for="test24">Internet</label> 
             </div>
-            <div class="row">
-              <div class="offset-m2 col m3 ">
-                    <input type="checkbox" id="test23" />
-                    <label class="advanced" for="test23">Desayuno</label> 
-              </div>
-              <div class="col m3">
-                    <input type="checkbox" id="test24" />
-                    <label class="advanced" for="test24">Internet</label> 
-              </div>
-              <div class="col m3 optional">
-                    <input type="checkbox" id="test25" />
-                    <label class="advanced" for="test25">Lavadora</label> 
-              </div> 
+            <div class="col m3 optional">
+              <input type="checkbox" id="test25" />
+              <label class="advanced" for="test25">Lavadora</label> 
+            </div> 
+          </div>
+          <div class="row">
+            <div class="offset-m2 col m3 ">
+              <input type="checkbox" id="test36" />
+              <label class="advanced" for="test36">Perchas</label> 
             </div>
-            <div class="row">
-              <div class="offset-m2 col m3 ">
-                    <input type="checkbox" id="test36" />
-                    <label class="advanced" for="test36">Perchas</label> 
-              </div>
-              <div class="col m3">
-                    <input type="checkbox" id="test37"/>
-                    <label class="advanced" for="test37"> Pestillo en la puerta del dormitorio</label> 
-              </div>
-              <div class="col m3 optional">
-                    <input type="checkbox" id="test26" />
-                    <label class="advanced" for="test26">Plancha</label> 
-              </div> 
+            <div class="col m3">
+              <input type="checkbox" id="test37"/>
+              <label class="advanced" for="test37"> Pestillo en la puerta del dormitorio</label> 
             </div>
-            <div class="row">
-              <div class="offset-m2 col m3 ">
-                    <input type="checkbox" id="test27" />
-                    <label class="advanced" for="test27">Secador de pelo</label> 
-              </div>
-              <div class="col m3">
-                    <input type="checkbox" id="test28" />
-                    <label class="advanced" for="test28">Secadora</label> 
-              </div>
-              <div class="col m3 optional">
-                    <input type="checkbox" id="test29" />
-                    <label class="advanced" for="test29">TV por satélite</label> 
-              </div> 
+            <div class="col m3 optional">
+              <input type="checkbox" id="test26" />
+              <label class="advanced" for="test26">Plancha</label> 
+            </div> 
+          </div>
+          <div class="row">
+            <div class="offset-m2 col m3 ">
+              <input type="checkbox" id="test27" />
+              <label class="advanced" for="test27">Secador de pelo</label> 
             </div>
-            <div class="row">
-              <div class="offset-m2 col m3 ">
-                    <input type="checkbox" id="test30" />
-                    <label class="advanced" for="test30">Timbre / Interfono inalámbrico</label> 
-              </div>
-              <div class="col m3">
-                    <input type="checkbox" id="test31" />
-                    <label class="advanced" for="test31">Zona para trabajar con portátiles</label> 
-              </div>
+            <div class="col m3">
+              <input type="checkbox" id="test28" />
+              <label class="advanced" for="test28">Secadora</label> 
+            </div>
+            <div class="col m3 optional">
+              <input type="checkbox" id="test29" />
+              <label class="advanced" for="test29">TV por satélite</label> 
+            </div> 
+          </div>
+          <div class="row">
+            <div class="offset-m2 col m3 ">
+              <input type="checkbox" id="test30" />
+              <label class="advanced" for="test30">Timbre / Interfono inalámbrico</label> 
+            </div>
+            <div class="col m3">
+              <input type="checkbox" id="test31" />
+              <label class="advanced" for="test31">Zona para trabajar con portátiles</label> 
             </div>
           </div>
-          <!-- FIN FILTRO OPCIONAL -->
+        </div>
+        <!-- FIN FILTRO OPCIONAL -->
 
         <div class="row">
           <div class="col m2">
             <h6>Servicios</h6> 
           </div>
           <div class="col m3">
-                <input type="checkbox" id="test8" />
-                <label class="advanced" for="test8">Edificio con ascensor</label> 
+            <input type="checkbox" id="test8" />
+            <label class="advanced" for="test8">Edificio con ascensor</label> 
           </div>
           <div class="col m3">
-                <input type="checkbox" id="test9" />
-                <label class="advanced" for="test9">Gimnasio</label> 
+            <input type="checkbox" id="test9" />
+            <label class="advanced" for="test9">Gimnasio</label> 
           </div>
           <div class="col m2">
-                <input type="checkbox" id="test10" />
-                <label class="advanced" for="test10">Piscina</label> 
+            <input type="checkbox" id="test10" />
+            <label class="advanced" for="test10">Piscina</label> 
           </div>
           <div class="col m2 down">
             <span><i class="material-icons down-two">&#xE5C5;</i></span>
             <span><i class="material-icons up-two">&#xE5C7;</i></span>
           </div>
         </div>
-          <!-- FILTRO OPCIONAL -->
-          <div class="row filter-optional-two">
-            <div class="divider optional"></div>
-            <div class="offset-m2 col m3 ">
-                  <input type="checkbox" id="test32" />
-                  <label class="advanced" for="test32">Acceso para discapacitados</label> 
-            </div>
-            <div class="col m3">
-                  <input type="checkbox" id="test33" />
-                  <label class="advanced" for="test33"> Aparcamiento de pago fuera de las instalaciones</label> 
-            </div>
-            <div class="col m3 optional">
-                  <input type="checkbox" id="test34" />
-                  <label class="advanced" for="test34">Parking gratuito incluido</label> 
-            </div>
-            <div class="row">
-              <div class="offset-m2 col m3 ">
-                    <input type="checkbox" id="test35" />
-                    <label class="advanced" for="test35"> Jacuzzi</label> 
-              </div>
-            </div>
-
+        <!-- FILTRO OPCIONAL -->
+        <div class="row filter-optional-two">
+          <div class="divider optional"></div>
+          <div class="offset-m2 col m3 ">
+            <input type="checkbox" id="test32" />
+            <label class="advanced" for="test32">Acceso para discapacitados</label> 
           </div>
-   
-          <!-- FIN FILTRO OPCIONAL -->
+          <div class="col m3">
+            <input type="checkbox" id="test33" />
+            <label class="advanced" for="test33"> Aparcamiento de pago fuera de las instalaciones</label> 
+          </div>
+          <div class="col m3 optional">
+            <input type="checkbox" id="test34" />
+            <label class="advanced" for="test34">Parking gratuito incluido</label> 
+          </div>
+          <div class="row">
+            <div class="offset-m2 col m3 ">
+              <input type="checkbox" id="test35" />
+              <label class="advanced" for="test35"> Jacuzzi</label> 
+            </div>
+          </div>
+
+        </div>
+
+        <!-- FIN FILTRO OPCIONAL -->
         <div class="row">
           <div class="col m2">
             <h6>Normas de la casa</h6> 
           </div>
           <div class="col m3">
-                <input type="checkbox" id="test11" />
-                <label class="advanced" for="test11">Admite mascotas</label> 
+            <input type="checkbox" id="test11" />
+            <label class="advanced" for="test11">Admite mascotas</label> 
           </div>
           <div class="col m3">
-                <input type="checkbox" id="test12" />
-                <label class="advanced" for="test12">Apto para eventos</label> 
+            <input type="checkbox" id="test12" />
+            <label class="advanced" for="test12">Apto para eventos</label> 
           </div>
           <div class="col m3">
-                <input type="checkbox" id="test13"/>
-                <label class="advanced" for="test13">Apto para fumadores</label> 
+            <input type="checkbox" id="test13"/>
+            <label class="advanced" for="test13">Apto para fumadores</label> 
           </div>
         </div>
         <div class="row">
@@ -372,30 +369,33 @@
             <h6>Idioma del anfitrión</h6> 
           </div>
           <div class="col m3">
-                <input type="checkbox" id="test14"/>
-                <label class="advanced" for="test14">Español</label> 
+            <input type="checkbox" id="test14"/>
+            <label class="advanced" for="test14">Español</label> 
           </div>
           <div class="col m3">
-                <input type="checkbox" id="test15"/>
-                <label class="advanced" for="test15">English</label> 
+            <input type="checkbox" id="test15"/>
+            <label class="advanced" for="test15">English</label> 
           </div>
           <div class="col m3">
-                <input type="checkbox" id="test16"/>
-                <label class="advanced" for="test16">Français</label> 
+            <input type="checkbox" id="test16"/>
+            <label class="advanced" for="test16">Français</label> 
           </div>
         </div>
         <!-- BOTONES CANCELAR - APLICAR -->
         <div class="row">
           <div class="offset-m4 col m4 center-align">
-             <span class="filter add">Cancelar</span>
-          </div>
-          <div class="col m4 center-align">
-             <span class="filter add apply red lighten-1">Aplicar filtros</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+           <span class="filter add">Cancelar</span>
+         </div>
+         <div class="col m4 center-align">
+           <span class="filter add apply red lighten-1">Aplicar filtros</span>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
+</section>
+
+
 
 <script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
